cabal-version:      2.4
name:               reflex-route-simple
version:            0.1.0.0
author:             Ilya Kostyuchenko
maintainer:         ilyakooo0@gmail.com

library
  exposed-modules:
    Reflex.Dom.Route.Simple,
    Reflex.Dom.Route.Simple.Internal,
    Reflex.Dom.Route.Simple.Internal.PrintRoute,
    Reflex.Dom.Route.Simple.Internal.ParseRoute,
    Reflex.Dom.Route.Simple.Internal.Common,
    Reflex.Dom.Route.Simple.Internal.MonadRoute
  build-depends:
    base,
    reflex-dom,
    reflex,
    text,
    mtl,
    jsaddle,
    ghcjs-dom,
    ref-tf,
    http-api-data,
    network-uri
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -- Because reflex-dom is a false positive.
    -Wno-unused-packages
    -Wno-partial-type-signatures
    -Wno-unticked-promoted-constructors
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , DuplicateRecordFields
                     , GADTs
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , MonoLocalBinds
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , UndecidableInstances
                     , FunctionalDependencies
                     , AllowAmbiguousTypes
                     , OverloadedLabels
                     , ViewPatterns
                     , ApplicativeDo
                     , PartialTypeSignatures
                     , PolyKinds
                     , StandaloneKindSignatures
                     , DefaultSignatures
                     , DeriveAnyClass
                     , QuantifiedConstraints

executable reflex-route-simple-example
  if impl(ghcjs >= 0.2.1)
    ghcjs-options:     -dedupe
  ghcjs-options: -DGHCJS_BUSY_YIELD=20
                 -DGHCJS_GC_INTERVAL=60000
  main-is:          Main.hs
  build-depends:
    base,
    reflex-dom,
    reflex-route-simple,
    text,
    containers,
    lorem
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -- Because reflex-dom is a false positive.
    -Wno-unused-packages
    -Wno-partial-type-signatures
    -Wno-unticked-promoted-constructors
    -threaded
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , DuplicateRecordFields
                     , GADTs
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , MonoLocalBinds
                     , RankNTypes
                     , RecordWildCards
                     , RecursiveDo
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , UndecidableInstances
                     , FunctionalDependencies
                     , AllowAmbiguousTypes
                     , OverloadedLabels
                     , ViewPatterns
                     , ApplicativeDo
                     , PartialTypeSignatures
                     , PolyKinds
                     , StandaloneKindSignatures
                     , DefaultSignatures
                     , DeriveAnyClass
